<resources>
    <string name="app_name">messenger_with_firebase</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset">Reset password</string>
    <string name="username">Username</string>
    <string name="repeat_the_password">Repeat the password:</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="chatiq">ChatIQ</string>
    <string name="logout">LogOut</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="age">Age:</string>
    <string name="the_reset_link">The reset link has been sent to your email!</string>
    <string name="online_presence">online presence</string>
    <string name="user_description">User description</string>
    <string name="message">This is a message... This is a message.. This is a message.. This is a message.. This is a message.. This is a message.. This is a message..</string>
    <string name="type_new_message">Type new message...</string>
    <string name="user_logo">user logo</string>
    <string name="online_indicator">online indicator</string>
    <string name="send_button">send button</string>
</resources>