<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:padding="16dp"
        android:text="@string/reset_password"
        android:textSize="30sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextUsernameForReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:hint="@string/email"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:cornerRadius="10dp"
        android:layout_margin="10dp"
        android:padding="16dp"/>


</LinearLayout>