<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:background="@color/bg_users">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="UserName UserLastName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:padding="16dp"/>

    <ImageView
        android:id="@+id/imageViewChatStatus"
        android:layout_width="16dp"
        android:layout_height="16dp"
        tools:src="@drawable/red_circle"
        android:layout_margin="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewTitle"
        app:layout_constraintBottom_toBottomOf="@id/textViewTitle"
        android:contentDescription="@string/online_indicator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        tools:listitem="@layout/my_message_item"
        app:layout_constraintBottom_toTopOf="@id/editTextNewMessage"/>

    <EditText
        android:id="@+id/editTextNewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/type_new_message"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="48dp"
        android:inputType="textMultiLine"
        tools:text="long textlong textlong textlong textlong textlong textlong textlong textlong texlong textlong textlong text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageViewSend"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/ic_menu_send"
        app:tint="@color/grey"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/editTextNewMessage"
        app:layout_constraintTop_toTopOf="@id/editTextNewMessage"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/send_button" />


</androidx.constraintlayout.widget.ConstraintLayout>